permutation implementation modification